# gaemini-contracts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  notify-consumers.yml
src/gaemini_contracts/: __init__.py  time.py
src/gaemini_contracts/keys/: __init__.py  command_log_path.py  event_parquet_path.py  log_path.py  parquet_path.py  redis_keys.py  trade_log_path.py
src/gaemini_contracts/naming/: __init__.py  instance.py  path_segment.py
src/gaemini_contracts/protocols/: __init__.py  order_manager.py  real_account.py  redis.py
src/gaemini_contracts/schema/: __init__.py  event.py  ohlcv.py
src/gaemini_contracts/strategy/: __init__.py  base.py
src/gaemini_contracts/types/: __init__.py  account.py  command_record.py  context.py  json_value.py  log_record.py  order.py  orderbook.py  output.py  spec.py  trade_record.py
src/gaemini_contracts/versioning/: __init__.py  validators.py
tests/: test_keys.py  test_keys_event.py  test_naming.py  test_schema_event.py  test_schema_ohlcv.py  test_time.py  test_types_orderbook.py  test_types_serialization.py  test_validators.py
